--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -22,6 +22,10 @@
     <servlet-name>MultiplyNumbersServlet</servlet-name>
     <servlet-class>edu.ycp.cs320.Minotaurs_Labyrinth.servlet.MultiplyNumbersServlet</servlet-class>
   </servlet>
+  <servlet>
+    <servlet-name>MinotaursLabyrinthServlet</servlet-name>
+    <servlet-class>edu.ycp.cs320.Minotaurs_Labyrinth.servlet.MultiplyNumbersServlet</servlet-class>
+  </servlet>
   
   <!-- AJAX servlets. -->
   <servlet>
@@ -53,6 +57,10 @@
     <servlet-mapping>
     <servlet-name>MultiplyNumbersServlet</servlet-name>
     <url-pattern>/multiplyNumbers</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>MinotaursLabyrinthServlet</servlet-name>
+    <url-pattern>/minotaursLabyrinth</url-pattern>
   </servlet-mapping>
   
   <!--  AJAX servlet mappings. -->
