--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -14,7 +14,10 @@
     <servlet-name>CombatServlet</servlet-name>
     <servlet-class>edu.ycp.cs320.Minotaurs_Labyrinth.servlet.CombatServlet</servlet-class>
   </servlet>
-  
+  <servlet>
+    <servlet-name>DialogueServlet</servlet-name>
+    <servlet-class>edu.ycp.cs320.Minotaurs_Labyrinth.servlet.DialogueServlet</servlet-class>
+  </servlet>
 
 
 
@@ -28,5 +31,8 @@
     <servlet-name>CombatServlet</servlet-name>
     <url-pattern>/combat</url-pattern>
   </servlet-mapping>
-
+<servlet-mapping>
+    <servlet-name>DialogueServlet</servlet-name>
+    <url-pattern>/dialogue</url-pattern>
+  </servlet-mapping>
 </web-app>
