--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
 encoding//src/edu/ycp/cs320/Minotaurs_Labyrinth/servlet/MinotaursLabyrinthServlet.java=UTF-8
+encoding//war/_view/minotaursLabyrinth.jsp=UTF-8
