# WARNING: head commit changed in the meantime
1-27 done in room csv

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
+encoding//src/edu/ycp/CS320_Minotaurs_Labyrinth/tables/Room.csv=UTF-8
 encoding//src/edu/ycp/cs320/Minotaurs_Labyrinth/servlet/MinotaursLabyrinthServlet.java=UTF-8
 encoding//war/_view/minotaursLabyrinth.jsp=UTF-8
